- Mass Renaming of small to xsmall.

--- a/RockWeb/Styles/style-v2/_css-variable.scss
+++ b/RockWeb/Styles/style-v2/_css-variable.scss
@@ -136,7 +136,8 @@
 
   // SPACING 
   --spacing-tiny:       4px;
-  --spacing-small:      8px;
+  --spacing-xsmall:     8px;
+  --spacing-small:     12px;
   --spacing-medium:    16px;
   --spacing-large:     24px;
   --spacing-xlarge:    48px;
