--- a/RockWeb/Styles/style-v2/blocks/_checkin-core.scss
+++ b/RockWeb/Styles/style-v2/blocks/_checkin-core.scss
@@ -872,7 +872,7 @@ input.namesearch {
 
   .kioskmanager-location-label {
     float:          left;
-    padding-left:   var(--spacing-small);
+    padding-left:   var(--spacing-xsmall);
     font-size:      var(--font-size-h2);
     font-weight:    600;
   }
