--- a/RockWeb/Styles/style-v2/blocks/_checkin-mobile.scss
+++ b/RockWeb/Styles/style-v2/blocks/_checkin-mobile.scss
@@ -94,7 +94,7 @@
       margin-left:    auto;
 
       .btn {
-        padding:      var(--spacing-small) var(--spacing-large);
+        padding:      var(--spacing-xsmall) var(--spacing-large);
         margin:       var(--spacing-tiny);
         font-size:    var(--font-size-small);
         font-weight:  var(--font-weight-regular);
