--- a/RockWeb/Styles/style-v2/components/_badges.scss
+++ b/RockWeb/Styles/style-v2/components/_badges.scss
@@ -14,7 +14,7 @@
 .badge {
   display:            inline-block;
   min-width:          10px;
-  padding:            var(--spacing-tiny) var(--spacing-small);
+  padding:            var(--spacing-tiny) var(--spacing-xsmall);
   font-size:          var(--font-size-small);
   font-weight:        var(--font-weight-bold);
   line-height:        var(--line-height-compact);
