--- a/RockWeb/Styles/style-v2/components/_breadcrumbs.scss
+++ b/RockWeb/Styles/style-v2/components/_breadcrumbs.scss
@@ -10,7 +10,7 @@
 
 // ======================== BASE STYLE ========================
 .breadcrumb {
-  padding:          var(--spacing-small) var(--spacing-medium);
+  padding:          var(--spacing-xsmall) var(--spacing-medium);
   margin-bottom:    var(--spacing-large);
   list-style:       none;
   background-color: transparent;
