--- a/RockWeb/Styles/style-v2/components/_list-group.scss
+++ b/RockWeb/Styles/style-v2/components/_list-group.scss
@@ -20,7 +20,7 @@
 .list-group-item {
   position:           relative;
   display:            block;
-  padding:            var(--spacing-small) var(--spacing-medium);
+  padding:            var(--spacing-xsmall) var(--spacing-medium);
   // Place the border on the list items and negative margin up for better styling
   margin-bottom:      -1px;
   background-color:   var(--color-interface-softest);
