--- a/RockWeb/Styles/style-v2/components/_scaffolding.scss
+++ b/RockWeb/Styles/style-v2/components/_scaffolding.scss
@@ -90,7 +90,7 @@ hr {
 
 // Image thumbnails
 .img-thumbnail {
-  padding:          var(--spacing-small);
+  padding:          var(--spacing-xsmall);
   line-height:      var(--line-height-normal);
   background-color: var(--color-interface-softest);
   border:           1px solid var(--color-interface-stronger);
