--- a/RockWeb/Styles/style-v2/components/_tooltip.scss
+++ b/RockWeb/Styles/style-v2/components/_tooltip.scss
@@ -111,7 +111,7 @@
 // ======================== INNER & ARROW ========================
 .tooltip-inner {
   max-width:        $tooltip-max-width;
-  padding:          var(--spacing-tiny) var(--spacing-small);
+  padding:          var(--spacing-tiny) var(--spacing-xsmall);
   color:            var(--color-interface-softest);
   text-align:       center;
   background-color: var(--color-interface-stronger);
