--- a/RockWeb/Styles/style-v2/legacy/_media.scss
+++ b/RockWeb/Styles/style-v2/legacy/_media.scss
@@ -49,12 +49,12 @@
 // ======================== POSITIONING ========================
 .media-right,
 .media > .pull-right {
-  padding-left: var(--spacing-small);
+  padding-left: var(--spacing-xsmall);
 }
 
 .media-left,
 .media > .pull-left {
-  padding-right: var(--spacing-small);
+  padding-right: var(--spacing-xsmall);
 }
 
 .media-left,
