--- a/RockWeb/Styles/style-v2/rock-components/_ant-select.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_ant-select.scss
@@ -176,7 +176,7 @@
     transition: font-size 0.3s, line-height 0.3s, height 0.3s;
     user-select: none;
     margin-inline-end: var(--spacing-tiny);
-    padding-inline-start: var(--spacing-small);
+    padding-inline-start: var(--spacing-xsmall);
     padding-inline-end: var(--spacing-tiny);
   }
   .ant-select-disabled.ant-select-multiple .ant-select-selection-item {
