--- a/RockWeb/Styles/style-v2/rock-components/_card.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_card.scss
@@ -323,7 +323,7 @@
 
     .btn-primary,
     .btn-success {
-      margin: var(--spacing-tiny) 0 var(--spacing-tiny) var(--spacing-small);
+      margin: var(--spacing-tiny) 0 var(--spacing-tiny) var(--spacing-xsmall);
     }
   }
 
