--- a/RockWeb/Styles/style-v2/rock-components/_color-selector.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_color-selector.scss
@@ -6,7 +6,7 @@
 .color-selector-items {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--spacing-small);
+  gap: var(--spacing-xsmall);
 
   .color-selector-item-container {
     display: flex;
