--- a/RockWeb/Styles/style-v2/rock-components/_key-value.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_key-value.scss
@@ -12,7 +12,7 @@
 // ======================== BASE STYLE ========================
 .key-value-rows {
   .controls-row {
-    margin-bottom:  var(--spacing-small);
+    margin-bottom:  var(--spacing-xsmall);
     margin-right:   0;
 
     &.controls-row-full-width {
