--- a/RockWeb/Styles/style-v2/rock-components/_obsidian-dropdownlist.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_obsidian-dropdownlist.scss
@@ -15,7 +15,7 @@
 
     .ant-select-selector {
       height:           34px !important;
-      padding:          var(--spacing-small) var(--spacing-medium) !important;
+      padding:          var(--spacing-xsmall) var(--spacing-medium) !important;
       border-radius:    var(--rounded-small) !important;
       margin:           0 !important;
       background-color: initial !important;
