--- a/RockWeb/Styles/style-v2/rock-components/_panel-helper.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_panel-helper.scss
@@ -82,7 +82,7 @@
         grid-column:    1;
         /* Child buttons should have margins */
         > * {
-          margin-right: var(--spacing-small);
+          margin-right: var(--spacing-xsmall);
         }
       }
 
