--- a/RockWeb/Styles/style-v2/rock-components/_rating.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_rating.scss
@@ -11,7 +11,7 @@
 // ======================== BASE STYLE ========================
 .rating-input {
   i {
-    margin-right: var(--spacing-small);
+    margin-right: var(--spacing-xsmall);
     font-size: var(--font-size-h5);
     color: var(--color-primary); //Move form rock theme
     cursor: pointer;
