--- a/RockWeb/Styles/style-v2/rock-components/_security-controls.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_security-controls.scss
@@ -40,7 +40,7 @@
       color:        currentColor;
 
       @media (max-width: $screen-medium) {
-        padding:    0 var(--spacing-small);
+        padding:    0 var(--spacing-xsmall);
         .fa-caret-down {
           display:  none;
         }
