--- a/RockWeb/Styles/style-v2/rock-components/_update-panel-status.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_update-panel-status.scss
@@ -16,7 +16,7 @@
   top:        40%;
   left:       50%;
   z-index:    ($zindex-modal-background + 100);
-  padding:    var(--spacing-medium) var(--spacing-small);
+  padding:    var(--spacing-medium) var(--spacing-xsmall);
   margin-left: -30px;
   background-color: var(--color-primary);
   border-radius:    120px;
