--- a/RockWeb/Styles/style-v2/rock-components/_value-list.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_value-list.scss
@@ -11,7 +11,7 @@
 // ======================== BASE STYLE ========================
 .value-list-rows {
   .controls-row {
-    margin-bottom: var(--spacing-small);
+    margin-bottom: var(--spacing-xsmall);
     margin-right: 0;
   }
 }
