--- a/RockWeb/Styles/style-v2/rock-components/_vue-select.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_vue-select.scss
@@ -182,7 +182,7 @@
 
 .vs__clear {
   padding:          0;
-  margin-right:     var(--spacing-small);
+  margin-right:     var(--spacing-xsmall);
   cursor:           pointer;
   background-color: transparent;
   border:           0;
