--- a/RockWeb/Styles/style-v2/utilities/_card.scss
+++ b/RockWeb/Styles/style-v2/utilities/_card.scss
@@ -278,7 +278,7 @@
 
     .btn-primary,
     .btn-success {
-      margin: var(--spacing-tiny) 0 var(--spacing-tiny) var(--spacing-small);
+      margin: var(--spacing-tiny) 0 var(--spacing-tiny) var(--spacing-xsmall);
     }
   }
 
