--- a/RockWeb/Styles/style-v2/blocks/_blocks-cms.scss
+++ b/RockWeb/Styles/style-v2/blocks/_blocks-cms.scss
@@ -55,7 +55,7 @@
   border-bottom:        1px solid var(--color-interface-soft);
 
   > .rollover-item {
-    margin-top:         var(--spacing-small);
+    margin-top:         var(--spacing-xsmall);
   }
 }
 
@@ -266,8 +266,8 @@
       color:            var(--color-interface-medium);
       background:       var(--color-interface-softer);
       border-color:     var(--color-interface-softer);
-      border-top-left-radius:     var(--spacing-small);
-      border-bottom-left-radius:  var(--spacing-small);
+      border-top-left-radius:     var(--spacing-xsmall);
+      border-bottom-left-radius:  var(--spacing-xsmall);
     }
 
     .form-control {
@@ -275,8 +275,8 @@
       font-size:        var(--font-size-h5);
       background:       var(--color-interface-softer);
       border-color:     var(--color-interface-softer);
-      border-top-right-radius:    var(--spacing-small);
-      border-bottom-right-radius: var(--spacing-small);
+      border-top-right-radius:    var(--spacing-xsmall);
+      border-bottom-right-radius: var(--spacing-xsmall);
       box-shadow:       none;
     }
   }
@@ -298,7 +298,7 @@
   .radio-inline {
     display:            inline-block;
     padding:            0;
-    margin:             0 var(--spacing-tiny) var(--spacing-small);
+    margin:             0 var(--spacing-tiny) var(--spacing-xsmall);
     font-size:          var(--font-size-small);
     font-weight:        var(--font-weight-regular);
     line-height:        20px;
