--- a/RockWeb/Styles/style-v2/blocks/_blocks-finance.scss
+++ b/RockWeb/Styles/style-v2/blocks/_blocks-finance.scss
@@ -66,7 +66,7 @@
   }
 
   .toggle-container {
-    margin-bottom:  var(--spacing-small);
+    margin-bottom:  var(--spacing-xsmall);
   }
 
   .navigate-actions {
