--- a/RockWeb/Styles/style-v2/blocks/_blocks-reporting.scss
+++ b/RockWeb/Styles/style-v2/blocks/_blocks-reporting.scss
@@ -14,7 +14,7 @@
 // ======================== DATA VIEW ========================
 .filter-toggle {
   align-self:            flex-start;
-  padding-right:        var(--spacing-small);
+  padding-right:        var(--spacing-xsmall);
   // margin-top:         5px;
 
   & > span {
@@ -43,7 +43,7 @@
   // Add margin to in-columns because checkbox-inline is not inherited
   .in-columns,
   .checkbox-inline {
-    margin-top:        var(--spacing-small);
+    margin-top:        var(--spacing-xsmall);
   }
 
   @media (min-width: $screen-medium) {
@@ -71,8 +71,8 @@
 span.data-view-filter-label {
   display:             inline-block;
   min-height:          calc(($line-height-computed + var(--font-size-regular)) - 2);
-  padding-top:         var(--spacing-small);
-  padding-bottom:      var(--spacing-small);
+  padding-top:         var(--spacing-xsmall);
+  padding-bottom:      var(--spacing-xsmall);
   margin:              0 12px 0 0;
 }
 // ====================== END DATA VIEW ======================
@@ -91,7 +91,7 @@ span.data-view-filter-label {
 
 .filterfield-label {
   display:             block;
-  margin-top:         var(--spacing-small);
+  margin-top:         var(--spacing-xsmall);
   font-weight:        var(--font-weight-semibold);
 }
 // ==================== END DYNAMIC REPORT ====================
