--- a/RockWeb/Styles/style-v2/components/_pagination.scss
+++ b/RockWeb/Styles/style-v2/components/_pagination.scss
@@ -21,7 +21,7 @@
     > span {
       position:           relative;
       float:              left; // Collapse white-space
-      padding:            var(--spacing-small) 12px; // Need to hard code to fix spacing for the pagination 
+      padding:            var(--spacing-xsmall) 12px; // Need to hard code to fix spacing for the pagination 
       margin-left:        -1px;
       line-height:        16px; // Need to hard code to fix spacing for the pagination 
       color:              var(--color-interface-stronger);
@@ -90,7 +90,7 @@
   > li {
     > a,
     > span {
-      padding:      var(--spacing-small) var(--rounded-xlarge);
+      padding:      var(--spacing-xsmall) var(--rounded-xlarge);
       font-size:    var(--font-size-h5);
       line-height:  var(--line-height-normal);
     }
@@ -116,7 +116,7 @@
   > li {
     > a,
     > span {
-      padding:      var(--spacing-small) var(--rounded-medium);
+      padding:      var(--spacing-xsmall) var(--rounded-medium);
       font-size:    var(--font-size-small);
       line-height:  var(--line-height-normal);
     }
