--- a/RockWeb/Styles/style-v2/components/_panels.scss
+++ b/RockWeb/Styles/style-v2/components/_panels.scss
@@ -76,7 +76,7 @@
 
 // PANEL FOOTER
 .panel-footer {
-  padding:                      var(--spacing-small) var(--spacing-medium);
+  padding:                      var(--spacing-xsmall) var(--spacing-medium);
   border-top:                   1px solid var(--color-interface-soft);
   border-bottom-right-radius:   3px;  
   border-bottom-left-radius:    3px;
@@ -436,7 +436,7 @@
 
 // ======================= PANEL TOOLBAR =======================
 .panel-toolbar {
-  padding:        var(--spacing-small) var(--spacing-medium);
+  padding:        var(--spacing-xsmall) var(--spacing-medium);
   font-size:      var(--font-size-xsmall);
   border-bottom:  1px solid var(--color-interface-soft);
   display:        flex;
@@ -472,7 +472,7 @@
   }
 
   .nav-pills {
-    margin:       6px var(--spacing-small);
+    margin:       6px var(--spacing-xsmall);
 
     > li {
       margin-top:     6px;
@@ -649,7 +649,7 @@
     }
 
     h4 {
-      padding:      var(--spacing-small) var(--spacing-medium);
+      padding:      var(--spacing-xsmall) var(--spacing-medium);
       margin:       -13px -18px 12px;
       font-size:    var(--font-size-small);
       font-weight:  var(--font-weight-semibold);
@@ -799,7 +799,7 @@
   overflow: hidden;
 
   .panel-heading {
-    padding-bottom: var(--spacing-small);
+    padding-bottom: var(--spacing-xsmall);
 
     + .panel-body {
       border-top:   1px solid var(--color-interface-soft);
@@ -1046,7 +1046,7 @@
     .control-label {
       position:     absolute;
       z-index:      30;
-      padding:      var(--spacing-small) var(--spacing-medium);
+      padding:      var(--spacing-xsmall) var(--spacing-medium);
       font-size:    var(--font-size-xsmall);
       font-weight:  var(--font-weight-regular);
       color:        var(--color-interface-strong);
@@ -1062,7 +1062,7 @@
     .btn {
       display:          flex;
       justify-content:  space-between;
-      padding-top:      calc((var(--spacing-small) * 2) + 14px);
+      padding-top:      calc((var(--sxpacing-small) * 2) + 14px);
       text-align:       left;
       background:       transparent;
       border:           0;
