--- a/RockWeb/Styles/style-v2/components/_thumbnails.scss
+++ b/RockWeb/Styles/style-v2/components/_thumbnails.scss
@@ -37,7 +37,7 @@
 
   // Image captions
   .caption {
-    padding:      var(--spacing-small);
+    padding:      var(--spacing-xsmall);
     color:        var(--color-interface-stronger);
   }
   
