--- a/RockWeb/Styles/style-v2/components/_wells.scss
+++ b/RockWeb/Styles/style-v2/components/_wells.scss
@@ -41,7 +41,7 @@
 }
 
 .well-sm {
-  padding:        var(--spacing-small);
+  padding:        var(--spacing-xsmall);
   border-radius:  var(--rounded-tiny);
 }
 // ======================== END WELL SIZES ========================
