--- a/RockWeb/Styles/style-v2/rock-components/_follow.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_follow.scss
@@ -26,7 +26,7 @@
   right:        0;
   bottom:       0;
   width:        $panel-follow-status-width;
-  padding-top:  var(--spacing-small);
+  padding-top:  var(--spacing-xsmall);
   color:        var(--color-interface-stronger);
   text-align:   center;
   cursor:       pointer;
