--- a/RockWeb/Styles/style-v2/rock-components/_group-list.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_group-list.scss
@@ -31,7 +31,7 @@
       float:            left;
       width:            64px;
       height:           64px;
-      margin-right:     var(--spacing-small);
+      margin-right:     var(--spacing-xsmall);
       background-size:  cover;
       border:           1px solid var(--color-interface-soft);
     }
