--- a/RockWeb/Styles/style-v2/rock-components/_image-cropper.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_image-cropper.scss
@@ -25,7 +25,7 @@
     position: absolute;
     top: 110px;
     right: 0;
-    padding: 0 var(--spacing-small);
+    padding: 0 var(--spacing-xsmall);
     color: var(--color-interface-stronger);
     background-color: $ui-autocomplete-bg;
     border-radius: var(--rounded-small) 0 0 var(--rounded-small);
