--- a/RockWeb/Styles/style-v2/rock-components/_rock-list.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_rock-list.scss
@@ -18,7 +18,7 @@ ul.rocklist {
     position:       relative;
     float:          left;
     width:          140px;
-    padding:        var(--spacing-small);
+    padding:        var(--spacing-xsmall);
     margin:         0 var(--spacing-medium) var(--spacing-medium) 0;
     text-align:     center;
     white-space:    nowrap;
