--- a/RockWeb/Styles/style-v2/rock-components/_wizard.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_wizard.scss
@@ -16,7 +16,7 @@
   -ms-flex-align:       start;
   -webkit-align-items:  flex-start;
   align-items:          flex-start;
-  padding:              var(--spacing-small) 0;
+  padding:              var(--spacing-xsmall) 0;
   background-color:     var(--color-interface-softest);
   margin-bottom: var(--spacing-large);
   border: 1px solid var(--color-interface-soft);
